# conus

./: README.md  manage.py  pyproject.toml
conus/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
notice/: admin.py  forms.py  models.py  urls.py  views.py
notice/migrations/: 0001_initial.py
notice/tasks/: email.py
notice/templates/notice/: notice_create.html  notice_recv_list.html  notice_send_list.html
notice/utils/: email.py
templates/: base.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_contactinfo.py  0003_alter_contactinfo_email.py
user/templates/user/: update_email.html
user/utils/: email.py
